--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,4 +1,19 @@
 nav {
   min-height: 10vh;
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  button {
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    border: 2px solid rgb(66, 66, 66);
+    padding: 0.5rem;
+    transition: all 0.3s ease;
+    &:hover {
+      background: rgb(66, 66, 66);
+      color: white;
+    }
+  }
 }
