--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,12 +5,13 @@
 }
 body {
   font-family: "Ubuntu", sans-serif;
+  background-color: rgb(34, 34, 34);
 }
 
 h3,
 h4 {
   font-weight: 400;
-  color: rgb(100, 100, 100);
+  color: white;
 }
 
 h1,
