--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 20rem;
   height: 100%;
-  background-color: white;
+  background-color: #222222;
   border-top-right-radius: 10rem;
   transform: translateX(-100%);
   transition: all 0.5s ease 0s;
@@ -14,6 +14,10 @@
   overflow-x: scroll;
   h2 {
     padding: 2rem;
+    color: white;
+  }
+  h3 {
+    color: white;
   }
 }
 
@@ -71,5 +75,6 @@
 @media screen and (max-width: 768px) {
   .library {
     width: 100%;
+    box-shadow: 2px 2px 30px rgb(202, 202, 202);
   }
 }
