--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -57,7 +57,7 @@ input[type="range"]::-moz-range-thumb {
   .animate-track {
     width: 100%;
     height: 100%;
-    background-color: rgb(204, 204, 204);
+    background-color: white;
     position: absolute;
     top: 0;
     left: 0;
