--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -10,9 +10,11 @@
   }
   h2 {
     padding: 2rem 1rem 1rem 1rem;
+    color: white;
   }
   h3 {
     font-size: 1rem;
+    color: white;
   }
 }
 
